<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/current_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/indoor_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indoor_temp"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/indoor_temp_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indoor_temp_num"
            android:layout_below="@id/indoor_temp"
            android:textSize="57sp"/>
        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:layout_below="@id/indoor_temp_num"
            android:textSize="30sp"/>
    </RelativeLayout>
    <View
        android:id="@+id/separate"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_temp"
        android:textSize="20sp"/>
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:scrollbars="vertical"
        android:stackFromBottom="false"
        android:transcriptMode="disabled"
        />
    <Button
        android:id="@+id/chart_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/recent_excel_btn"/>
</LinearLayout>