<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp">

    <android.support.v7.widget.AppCompatImageView
        android:layout_margin="80dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/icon"/>
    <EditText
        android:id="@+id/edtLoginMobile"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:maxLength="11"
        android:hint="@string/login_common_mobile"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/edtLoginPwd"
        android:maxLength="8"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/login_common_pwd"
        android:inputType="textPassword"
        android:layout_marginBottom="3dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/checkbox"
            android:text="@string/rememberpwd"
            android:textSize="19sp"
            android:paddingTop="4dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_button"
        />
    <TextView
        android:id="@+id/txt_reg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/hint"/>

</LinearLayout>